# ai_receipt_scanner

./: README.md
ai_receipt_scanner/: README.md  pyproject.toml
ai_receipt_scanner/src/ai_receipt_scanner/: crew.py  main.py
receipt-pics/: README.md
src/: crew.py  crew_report.py  expense_report.json  expense_report.md  main.py  todo.txt
src/config/: agents.yaml  agents_report.yaml  tasks.yaml  tasks_report.yaml
src/tools/: reporting_tool.py
