[project]
name = "ai_receipt_scanner"
version = "0.1.0"
description = "ai-receipt-scanner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ai_receipt_scanner = "ai_receipt_scanner.main:run"
run_crew = "ai_receipt_scanner.main:run"
train = "ai_receipt_scanner.main:train"
replay = "ai_receipt_scanner.main:replay"
test = "ai_receipt_scanner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
